# MH-with-scalable-subsampling

./: 00_results_all_vectorised.pickle  01_Figure_1.py  01_Figures_1_and_8c.py  02_Figure_2.py  03_Figures_3_and_4.py  03_results_Figures_34567.py  04_Figures_5_6_7_8_9.py  04_aux_generate_results.py  04_generate_Figures_34567.py  05_Table_1.py  06_Figure_10.py  07_Appendix_D.py  README.md  algorithms.py  logisticEfficiencyMetricsMHSS1N100000d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS1N10000d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS1N1000d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS1N31622d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS1N3162d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS2N100000d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS2N10000d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS2N1000d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS2N31622d10Impvectorised.pickle  logisticEfficiencyMetricsMHSS2N3162d10Impvectorised.pickle  logisticEfficiencyMetricsRWMN100000d10Impvectorised.pickle  logisticEfficiencyMetricsRWMN10000d10Impvectorised.pickle  logisticEfficiencyMetricsRWMN1000d10Impvectorised.pickle  logisticEfficiencyMetricsRWMN31622d10Impvectorised.pickle  logisticEfficiencyMetricsRWMN3162d10Impvectorised.pickle  logisticEfficiencyMetricsSMH1NBN100000d10Impvectorised.pickle  logisticEfficiencyMetricsSMH1NBN10000d10Impvectorised.pickle  logisticEfficiencyMetricsSMH1NBN1000d10Impvectorised.pickle  logisticEfficiencyMetricsSMH1NBN31622d10Impvectorised.pickle  (+33 more)
mhss/: pyproject.toml  test.py  (+3 more)
(+28 files in other folders)
